# lessllm

./: .gitignore  ALIYUN_PROXY_ADAPTATION_SUMMARY.md  ALIYUN_PROXY_CONFIGURATION.md  ALIYUN_PROXY_FIX_SUMMARY.md  ALIYUN_PROXY_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  ENHANCED_ANALYTICS.md  GUI_USAGE.md  README.md  USAGE_GUIDE.md  clear_data.py  lessllm-0.2.0.tar.gz.sha256  lessllm-0.2.0.zip.sha256  pyproject.toml  release.sh  requirements.txt  setup.py  test_basic_functionality.sh  test_enhanced_analytics.py  test_exact_body.py  test_gui_start.py  test_httpx_client.py  test_requests.py  test_smart_routing.sh  test_streaming_analysis.sh  test_summary.md  test_various.py  update_token_data.py
.claude/agents/: software-engineer.md
docs/: development-guide.md  requirements-and-scenarios.md  technical-design.md  testing-strategy.md
examples/: lessllm.yaml  test_client.py
gui/: README.md  __init__.py  cache.py  dashboard.py
lessllm/: cli.py  config.py  server.py
lessllm-0.2.0/: LICENSE  QUICK_START.md  README.md  STREAMING_SUPPORT.md  TEST_RESULTS.md  install.sh  lessllm.yaml.example  pyproject.toml  requirements.txt  test_multi_provider.yaml.example
lessllm-0.2.0/gui/: app.py  costs.py  dashboard_old.py  export.py  logs.py  models.py  performance.py  requirements.txt
lessllm-0.2.0/lessllm/: __init__.py  server.py
lessllm-0.2.0/lessllm/logging/: __init__.py
lessllm-0.2.0/lessllm/monitoring/: __init__.py  cache_estimator.py
lessllm-0.2.0/lessllm/providers/: claude.py  openai.py
lessllm-0.2.0/lessllm/proxy/: __init__.py
lessllm-0.2.0/tests/: test_aliyun_claude.sh  test_aliyun_streaming.sh  test_claude_messages.sh  test_lessllm_server.sh  test_system.py
lessllm/logging/: logger.py  models.py  storage.py
lessllm/monitoring/: performance.py
lessllm/providers/: __init__.py  base.py  claude.py
lessllm/proxy/: manager.py
lessllm/utils/: __init__.py  cost_calculator.py  token_counter.py
src/lessllm/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_proxy_manager.py  test_storage.py
tests/unit/test_providers/: test_base.py  test_openai.py
